--- a/packages/asp-commitlint/package.json
+++ b/packages/asp-commitlint/package.json
@@ -14,6 +14,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "node ./__tests__/asp-commitlint.test.js"
+    "test": "node ./__tests__/asp-commitlint.test.js",
+    "publish": "npm publish"
   }
 }
